--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
     "@babel/core": ">=7.0.0-0 <8.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@date-io/core": "^2.13.1",
+    "@emotion/react": "^11.0.0-rc.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/lab": "^5.0.0-alpha.72",
+    "@mui/material": "^5.5.0",
+    "@mui/styles": "5.5.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "material-table": "^2.0.3",
     "node-sass": "^7.0.3",
+    "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
