--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "material-table": "^2.0.3",
+    "mdm-simple-modal": "^2.0.3",
     "node-sass": "^7.0.3",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
